--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,3 @@
-<h1>All Restaurants</h1>
-<hr>
 <% @restaurants.each do |restaurant| %>
-  <h2><%= restaurant.name %></h2>
+  <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
 <% end %>
