--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,16 @@
 <h2><%= @restaurant.name %></h2>
-<hr>
+<span><%= link_to "Edit", edit_restaurant_path %></span>
+<span>
+  <%= link_to "Delete", restaurant_path(@restaurant), method: :delete, data: {confirm: "Are you sure?"}  %>
+</span>
+<span><%= link_to "Leave a review", new_restaurant_review_path(@restaurant) %></span>
+<p></p>
 <p>Adress: <%= @restaurant.address%></p>
 <p>Phone: <%= @restaurant.phone_number%></p>
 <p>Catergory: <%= @restaurant.category%></p>
+<ul class="list-group">
+  <% @restaurant.reviews.each do |review| %>
+    <li class="list-group-item"><h5>Rating => <%= review.rating%></h5></li>
+    <li class="list-group-item"><%= review.content %></li>
+  <% end %>
+</ul>
